[RAA-003] Добавление architect-module, email-module

--- a/architect_module/src/main/resources/application.properties
+++ b/architect_module/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9191
 
-spring.application.name=architect
+spring.application.name=architect-module
 
 spring.datasource.url=jdbc:postgresql://localhost:5435/rent_apartment_db
 spring.datasource.username=root
@@ -17,3 +17,9 @@ spring.flyway.password=root
 spring.flyway.url=jdbc:postgresql://localhost:5435/rent_apartment_db
 
 spring.jpa.show-sql=true
+
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.client.register-with-eureka = true
+eureka.client.fetch-registry = true
+eureka.instance.hostname = localhost
+
