--- a/function_module/src/main/resources/application.properties
+++ b/function_module/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=9090
+server.port=0
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5435/rent_apartment_db
 spring.datasource.username=root
@@ -10,5 +11,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.application.name=function_module
+spring.application.name=function-module
+
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.client.register-with-eureka = true
+eureka.client.fetch-registry = true
+eureka.instance.hostname = localhost
+
+
+
+
 
