--- a/product_module/src/main/resources/application.properties
+++ b/product_module/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=9292
+
 spring.application.name=product_module
+
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.client.register-with-eureka = true
+eureka.client.fetch-registry = true
+eureka.instance.hostname = localhost
