--- a/server_module/src/main/resources/application.properties
+++ b/server_module/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=server_module
+spring.application.name=server-module
+
+server.port=8081
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.instance.hostname=localhost
+#logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
