[RAA-003] Добавление function-module, product-module

--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -17,16 +17,57 @@ spring.cloud.gateway.mvc.routes[1].uri=lb://email-module
 spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/auth/v4/send-mail
 spring.cloud.gateway.mvc.routes[1].predicates[1]=Method=POST
 
-spring.cloud.gateway.mvc.routes[2].id=registration
+spring.cloud.gateway.mvc.routes[2].id=registration-user
 spring.cloud.gateway.mvc.routes[2].uri=lb://function-module
 spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/auth/v1/registration
 spring.cloud.gateway.mvc.routes[2].predicates[1]=Method=POST
 
+spring.cloud.gateway.mvc.routes[3].id=authorisation-user
+spring.cloud.gateway.mvc.routes[3].uri=lb://function-module
+spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/auth/v1/authorisation
+spring.cloud.gateway.mvc.routes[3].predicates[1]=Method=POST
 
-#spring.cloud.gateway.mvc.routes[1].id=registration1
-#spring.cloud.gateway.mvc.routes[1].uri=lb://function-module
-#spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/auth/v1/authorisation
-#spring.cloud.gateway.mvc.routes[1].predicates[1]=Method=POST
+spring.cloud.gateway.mvc.routes[4].id=integration-product-module
+spring.cloud.gateway.mvc.routes[4].uri=lb://function-module
+spring.cloud.gateway.mvc.routes[4].predicates[0]=Path=/auth/v2/integration-pm
+spring.cloud.gateway.mvc.routes[4].predicates[1]=Method=GET
+
+spring.cloud.gateway.mvc.routes[5].id=registration-apartment
+spring.cloud.gateway.mvc.routes[5].uri=lb://function-module
+spring.cloud.gateway.mvc.routes[5].predicates[0]=Path=/auth/v2/registration
+spring.cloud.gateway.mvc.routes[5].predicates[1]=Method=POST
+
+spring.cloud.gateway.mvc.routes[6].id=registration-raiting-comment
+spring.cloud.gateway.mvc.routes[6].uri=lb://function-module
+spring.cloud.gateway.mvc.routes[6].predicates[0]=Path=/auth/v2/registration-raiting-comment
+spring.cloud.gateway.mvc.routes[6].predicates[1]=Method=POST
+
+spring.cloud.gateway.mvc.routes[7].id=apartment-by-location
+spring.cloud.gateway.mvc.routes[7].uri=lb://function-module
+spring.cloud.gateway.mvc.routes[7].predicates[0]=Path=/auth/v2/apartment-by-location
+spring.cloud.gateway.mvc.routes[7].predicates[1]=Method=POST
+
+spring.cloud.gateway.mvc.routes[8].id=apartment-by-id
+spring.cloud.gateway.mvc.routes[8].uri=lb://function-module
+spring.cloud.gateway.mvc.routes[8].predicates[0]=Path=/auth/v2/{id}
+spring.cloud.gateway.mvc.routes[8].predicates[1]=Method=GET
+
+spring.cloud.gateway.mvc.routes[9].id=get-info-from-pm
+spring.cloud.gateway.mvc.routes[9].uri=lb://product-module
+spring.cloud.gateway.mvc.routes[9].predicates[0]=Path=/auth/v5/test
+spring.cloud.gateway.mvc.routes[9].predicates[1]=Method=GET
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
