--- a/product_module/src/main/resources/application.properties
+++ b/product_module/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=9292
+server.port=0
 
-spring.application.name=product_module
+spring.application.name=product-module
 
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 eureka.client.register-with-eureka = true
